whitespace fix between jobs posted and bartenders on home page, was 1400px now 200px. Dont merge if something seems weird please

--- a/src/app/assets/stylesheets/home.scss
+++ b/src/app/assets/stylesheets/home.scss
@@ -99,7 +99,7 @@
 	}
 
 	.top-row {
-		height: 1400px;
+		height: 200px;
 	}
 }
 
